--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,8 @@ h2 {
     padding: 16px;
     background-color: #ccc;
 }
+
+table,th,td  {
+    border: 1px solid #333;
+    border-collapse: collapse;
+}
